--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
    <!--=============== REMIXICONS ===============-->
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.min.css">
 
    <!--=============== CSS ===============-->
    <link rel="stylesheet" href="assets/css/styles.css">
