--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
          <div class="new__container container grid">
             <div class="new__data">
                <h2 class="section_title">
-                  NEW PLANTS FOR <br> YOUR HOME
+                 Balloon Decor For <br> Every Corner
                </h2>
                <p class="new__description">
-                  Select new ornamental plants for home decoration and obtain an atmosphere of harmony and freshness.
+                  Discover our unique balloon decorations to bring joy and color to every space in your home.
                </p>
             </div>
             <div class="new_content grid">
