--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
          <div class="shop_container container grid">
             <article class="shop_card">
-               <img src="assets/img/11.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/30.jpeg" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
@@ -132,7 +132,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/11.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/31.jpeg" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
@@ -142,7 +142,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/11.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/32.jpeg" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
@@ -152,7 +152,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/11.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/33.png" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
@@ -162,7 +162,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/11.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/34.jpeg" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
@@ -172,7 +172,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/11.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/35.jpeg" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
@@ -182,7 +182,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/26.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/36.jpeg" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
@@ -192,7 +192,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/27.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/37.jpeg" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
@@ -202,7 +202,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/28.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/38.jpeg" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
