--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/32.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/32.png" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
@@ -172,7 +172,7 @@
                </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/35.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/35.png" alt="image" class="shop_img">
 
                <h3 class="shop_title">Easter <br> Elegance</h3>
                <span class="shop_price">$15</span>
