--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--=============== FAVICON ===============-->
    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
-   <!--=============== REMIXICONS ===============-->
+   <!--=============== REMIXICONS ===============->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.min.css">
 
    <!--=============== CSS ===============-->
