add new section

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <!--=============== FAVICON ===============-->
+
    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
    <!--=============== REMIXICONS ===============-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.min.css">
 
    <!--=============== CSS ===============-->
    <link rel="stylesheet" href="assets/css/styles.css">
 
-   <title>Beyond & Ma balloons</title>
+   <title>Beyond & MA Balloons</title>
 </head>
 <body>
    <!--==================== HEADER ====================-->
@@ -21,7 +21,7 @@
       <nav class="nav container">
          <a href="#" class="nav__logo">
             <i class=""></i>
-            Beyond & Ma balloons
+            Beyond & MA Balloons
          </a>
 
          <div class="nav__menu" id="nav-menu">
@@ -29,7 +29,9 @@
                <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                <li class="nav__item"><a href="#new" class="nav__link active-link">New</a></li>
                <li class="nav__item"><a href="#shop" class="nav__link active-link">Shop</a></li>
+               <li class="nav__item"><a href="#menu" class="nav__link active-link">Stuffing Balloons</a></li>
                <li class="nav__item"><a href="#care" class="nav__link active-link">Idea</a></li>
+               <li class="nav__item"><a href="#grab-balloons" class="nav__link active-link">Grab Balloons</a></li>
                <li class="nav__item"><a href="#contact" class="nav__link active-link">Contact</a></li>
             </ul>
 
@@ -70,7 +72,7 @@
                   celebrations and decor.
                </p>
                <div class="home__buttons">
-                  <a href="#" class="button">
+                  <a href="#shop" class="button">
                      <span>
                         <i class="ri-arrow-right-line"></i>
                      </span>
@@ -89,7 +91,7 @@
          <div class="new__container container grid">
             <div class="new__data">
                <h2 class="section_title">
-                 Balloon Decor For <br> Every Corner
+                  Balloon Decor For <br> Every Corner
                </h2>
                <p class="new__description">
                   Discover our unique balloon decorations to bring joy and color to every space in your home.
@@ -124,93 +126,63 @@
             <article class="shop_card">
                <img src="assets/img/30.jpeg" alt="image" class="shop_img">
 
-               <h3 class="shop_title">Easter <br> Elegance</h3>
-               <span class="shop_price">$15</span>
+               <h3 class="shop_title" style="margin-top: 50px !important;">Joyous Jubilee</h3>
 
-               <button class="shop_button">
-                  <i class="ri-shopping-bag-line"></i>
-               </button>
             </article>
-            <article class="shop_card">
-               <img src="assets/img/31.jpeg" alt="image" class="shop_img">
 
-               <h3 class="shop_title">Easter <br> Elegance</h3>
-               <span class="shop_price">$15</span>
-
-               <button class="shop_button">
-                  <i class="ri-shopping-bag-line"></i>
-               </button>
-            </article>
             <article class="shop_card">
                <img src="assets/img/32.png" alt="image" class="shop_img">
 
-               <h3 class="shop_title">Easter <br> Elegance</h3>
-               <span class="shop_price">$15</span>
+               <h3 class="shop_title" style="margin-top: 50px !important;">Enchanted Garden</h3>
 
-               <button class="shop_button">
-                  <i class="ri-shopping-bag-line"></i>
-               </button>
             </article>
             <article class="shop_card">
                <img src="assets/img/33.png" alt="image" class="shop_img">
 
-               <h3 class="shop_title">Easter <br> Elegance</h3>
-               <span class="shop_price">$15</span>
+               <h3 class="shop_title" style="margin-top: 50px !important;">Joyous Jubilee</h3>
 
-               <button class="shop_button">
-                  <i class="ri-shopping-bag-line"></i>
-               </button>
             </article>
             <article class="shop_card">
-               <img src="assets/img/34.jpeg" alt="image" class="shop_img">
+               <img src="assets/img/17.jpeg" alt="image" class="shop_img">
 
-               <h3 class="shop_title">Easter <br> Elegance</h3>
-               <span class="shop_price">$15</span>
+               <h3 class="shop_title" style="margin-top: 50px !important;">Balloons in Bloom</h3>
 
-               <button class="shop_button">
-                  <i class="ri-shopping-bag-line"></i>
-               </button>
             </article>
             <article class="shop_card">
                <img src="assets/img/35.png" alt="image" class="shop_img">
 
-               <h3 class="shop_title">Easter <br> Elegance</h3>
-               <span class="shop_price">$15</span>
+               <h3 class="shop_title" style="margin-top: 50px !important;">Pastel Serenity</h3>
 
-               <button class="shop_button">
-                  <i class="ri-shopping-bag-line"></i>
-               </button>
             </article>
             <article class="shop_card">
                <img src="assets/img/36.jpeg" alt="image" class="shop_img">
 
-               <h3 class="shop_title">Easter <br> Elegance</h3>
-               <span class="shop_price">$15</span>
+               <h3 class="shop_title" style="margin-top: 50px !important;">Enchanted Garden Toast</h3>
 
-               <button class="shop_button">
-                  <i class="ri-shopping-bag-line"></i>
-               </button>
             </article>
-            <article class="shop_card">
-               <img src="assets/img/37.jpeg" alt="image" class="shop_img">
+         </div>
+      </section>
+      <!--==================== Stuffing Balloons ====================-->
+      <section class="menu section bd-container" id="menu">
+         <h2 class="section_title">Stuffing Balloons</h2>
 
-               <h3 class="shop_title">Easter <br> Elegance</h3>
-               <span class="shop_price">$15</span>
+         <div class="menu__container bd-grid">
+            <div class="menu__content">
+               <img src="assets/img/17.jpeg" alt="" class="menu__img">
+               <h3 class="menu__name">Crimson Charm</h3>
 
-               <button class="shop_button">
-                  <i class="ri-shopping-bag-line"></i>
-               </button>
-            </article>
-            <article class="shop_card">
-               <img src="assets/img/38-removebg-preview.png" alt="image" class="shop_img">
 
-               <h3 class="shop_title">Easter <br> Elegance</h3>
-               <span class="shop_price">$15</span>
+            </div>
 
-               <button class="shop_button">
-                  <i class="ri-shopping-bag-line"></i>
-               </button>
-            </article>
+            <div class="menu__content">
+               <img src="assets/img/36.jpeg" alt="" class="menu__img">
+               <h3 class="menu__name">Vivacious Vignette</h3>
+            </div>
+
+            <div class="menu__content">
+               <img src="assets/img/35.png" alt="" class="menu__img">
+               <h3 class="menu__name">Whispering Winter</h3>
+            </div>
          </div>
       </section>
 
@@ -257,7 +229,28 @@
             </ul>
          </div>
       </section>
-
+      <!--==================== GRAB BALLOONS UNDER 100£ ====================-->
+      <section class="grab-balloons section" id="grab-balloons">
+         <div class="grab-balloons__container container grid">
+            <h2 class="section_title">
+               Grab Balloons Under £100
+            </h2>
+            <p class="grab-balloons__description">
+               Explore our selection of high-quality helium balloons available in packs of 5, all priced under £100.
+               Whether
+               you're celebrating a special occasion or just want to add some fun to your day, these affordable options
+               are
+               perfect for you. Choose from a variety of colors, shapes, and themes.
+            </p>
+            <p class="grab-balloons__delivery">
+               We offer convenient options for getting your balloons:
+            <ul>
+               <li>Click and collect: Order online and pick up your balloons at our store location.</li>
+               <li>Delivery: We provide delivery services based on distance. Contact us for more information.</li>
+            </ul>
+            </p>
+         </div>
+      </section>
       <!--==================== CONTACT ====================-->
       <section class="contact section" id="contact">
          <h2 class="section_title">
@@ -309,7 +302,7 @@
       <div class="footer_container container grid">
          <div>
             <a href="#" class="footer_logo">
-               <i class="ri-cactus-line"></i> Beyond & Ma balloons
+               Beyond & MA Balloons
             </a>
             <p class="footer_description">
                Choose the best <br> CELEBRATORY BALLOON DECOR.
@@ -350,7 +343,7 @@
       </div>
 
       <span class="footer_copy">
-         &copy; All Rights Reserved Beyond & Ma balloons
+         &copy; All Rights Reserved Beyond & MA Balloons
       </span>
    </footer>
 
