--- a/index.html
+++ b/index.html
@@ -169,23 +169,22 @@
          <div class="menu__container bd-grid">
             <div class="menu__content">
                <img src="assets/img/17.jpeg" alt="" class="menu__img">
-               <h3 class="menu__name">Crimson Charm</h3>
+               <h3 class="menu__name" style="margin-left: 40px; margin-top: 10px;">Crimson Charm</h3>
 
 
             </div>
 
             <div class="menu__content">
                <img src="assets/img/36.jpeg" alt="" class="menu__img">
-               <h3 class="menu__name">Vivacious Vignette</h3>
+               <h3 class="menu__name" style="margin-left: 40px;margin-top: 10px;">Vivacious Vignette</h3>
             </div>
 
             <div class="menu__content">
                <img src="assets/img/35.png" alt="" class="menu__img">
-               <h3 class="menu__name">Whispering Winter</h3>
+               <h3 class="menu__name" style="margin-left: 40px; margin-top: 10px;">Whispering Winter</h3>
             </div>
          </div>
       </section>
-
       <!--==================== CARE ====================-->
       <section class="care section" id="care">
          <h2 class="section_title">
